--- a/package.json
+++ b/package.json
@@ -11,7 +11,41 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "ejs": "^3.1.8",
-    "express": "^4.18.1",
+    "express": "^4.18.1",{
+      "name": "userauth",
+      "version": "1.0.0",
+      "description": "",
+      "main": "index.js",
+      "scripts": {
+        "devStart": "nodemon server.js server2.js"
+      },
+      "author": "vasant kumar sharma",
+      "license": "ISC",
+      "dependencies": {
+        "assert": "^2.0.0",
+        "bcrypt": "^5.1.0",
+        "body-parser": "^1.20.1",
+        "cookie-parser": "^1.4.6",
+        "ejs": "^3.1.8",
+        "express": "^4.18.1",
+        "express-flash": "^0.0.2",
+        "express-session": "^1.17.3",
+        "http-errors": "^2.0.0",
+        "lodash": "^4.17.21",
+        "method-override": "^3.0.0",
+        "mongodb": "^4.11.0",
+        "mongoose": "^6.7.2",
+        "morgan": "^1.10.0",
+        "passport": "^0.6.0",
+        "passport-local": "^1.0.0",
+        "path": "^0.12.7"
+      },
+      "devDependencies": {
+        "dotenv": "^16.0.1",
+        "nodemon": "^2.0.18"
+      }
+    }
+    
     "express-flash": "^0.0.2",
     "express-session": "^1.17.3",
     "method-override": "^3.0.0",
